--- a/src/Stylesheet/Home.css
+++ b/src/Stylesheet/Home.css
@@ -39,6 +39,16 @@ body{
 .head h2{
     color: rgb(255, 115, 0);
 }
+.pagebtn{
+    /* background-color: aqua; */
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.pagebtn button{
+    padding: 0px 15px;
+    cursor: pointer;
+}
 .content-wrap{
     width: 100%;
     height: 580px;
